fix view on mobile

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -358,7 +358,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #fh5co-counter,
 #fh5co-event {
-  height: 100%;
+  height: 1000px;
   float: left;
 }
 #fh5co-counter .display-t,
@@ -367,7 +367,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-event .display-tc {
   height: 700px;
   display: table;
-  width: 90%;
+  width: 100%;
 }
 #fh5co-counter .fh5co-heading h2,
 #fh5co-event .fh5co-heading h2 {
@@ -415,7 +415,7 @@ h1, h2, h3, h4, h5, h6, figure {
   -ms-border-radius: 4px;
   border-radius: 4px;
 }
-@media screen and (max-width: 80%) {
+@media screen and (max-width: 768px) {
   #fh5co-counter .event-wrap,
   #fh5co-event .event-wrap {
     margin-bottom: 10px;
@@ -431,6 +431,18 @@ h1, h2, h3, h4, h5, h6, figure {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
+
+#fh5co-counter .event-wrap h4,
+#fh5co-event .event-wrap h4 {
+  color: white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  display: block;
+  padding-bottom: 20px;
+  font-family: "Sacramento", Arial, serif;
+  font-size: 30px;
+  letter-spacing: 2px;
+}
+
 #fh5co-counter .event-wrap p, #fh5co-counter .event-wrap span,
 #fh5co-event .event-wrap p,
 #fh5co-event .event-wrap span {
@@ -1016,7 +1028,7 @@ form label {
   padding: 7em 0;
   clear: both;
 }
-@media screen and (max-width: 100%) {
+@media screen and (max-width: 768px) {
   #fh5co-testimonial,
   #fh5co-services,
   #fh5co-started,
